@startuml

title __QUIZCLIENT's Class Diagram__\n

  namespace com.kyle.quiz {
    namespace lient {
      class com.kyle.quizclient.LocalStudentController {
          + LocalStudentController()
          + fetchQuizJson()
          + sendQuizJson()
          + setupApplication()
      }
    }
  }
  

  namespace com.kyle.quiz {
    namespace lient {
      class com.kyle.quizclient.LocalTeacherController {
          + LocalTeacherController()
          + browseAnswerFile()
          + browseKeyFile()
          + getAnswersJson()
          + pushQuizJson()
          + setupApplication()
      }
    }
  }
  

  namespace com.kyle.quiz {
    namespace lient {
      class com.kyle.quizclient.StudentClient {
          {static} ~ SCREEN_HEIGHT : int
          {static} ~ SCREEN_WIDTH : int
          {static} ~ WINDOW_TITLE : String
          {static} - controller : StudentController
          {static} + main()
          + start()
          + stop()
      }
    }
  }
  

  namespace com.kyle.quiz {
    namespace lient {
      abstract class com.kyle.quizclient.StudentController {
          {static} + MAX_QUIZ_EXIT_TIME : int
          + nameField : TextField
          + overlayMessage : Label
          + quizField : TextField
          + quizGrid : GridPane
          + quizOverlay : AnchorPane
          + quizPane : ScrollPane
          + quizSelect : StackPane
          + quizTitle : Label
          + selectMessage : Label
          # quizFileName : String
          # studentName : String
          # submitButton : Button
          ~ quizTimer : Timer
          + StudentController()
          {abstract} + fetchQuizJson()
          + findQuiz()
          + notFocused()
          + pauseTask()
          + quizComplete()
          {abstract} + sendQuizJson()
          {abstract} + setupApplication()
      }
    }
  }
  

  namespace com.kyle.quiz {
    namespace lient {
      class com.kyle.quizclient.TeacherClient {
          {static} ~ SCREEN_HEIGHT : int
          {static} ~ SCREEN_WIDTH : int
          {static} ~ WINDOW_TITLE : String
          {static} - controller : TeacherController
          {static} + main()
          + start()
      }
    }
  }
  

  namespace com.kyle.quiz {
    namespace lient {
      abstract class com.kyle.quizclient.TeacherController {
          + answerFile : TextField
          + keyFile : TextField
          + markButton : Button
          + previewButton : Button
          + quizFile : TextField
          + quizGrid : GridPane
          + quizIdField : Label
          + quizTitle : Label
          + reviewBox : VBox
          + reviewGrid : GridPane
          + reviewMessage : Label
          + reviewSelect : HBox
          + reviewTitle : Label
          + selectionGrid : GridPane
          + studentField : Label
          + uploadDest : TextField
          + uploadGrid : GridPane
          + uploadMessage : Label
          + uploadSelect : HBox
          # marksChart : Node
          # stage : Stage
          ~ fileChooser : FileChooser
          + TeacherController()
          + browseFile()
          + browseUploadFile()
          {abstract} + getAnswersJson()
          + markQuiz()
          + previewQuiz()
          {abstract} + pushQuizJson()
          + setStage()
          {abstract} + setupApplication()
          + switchToReview()
          + switchToUpload()
          + uploadQuiz()
          - tryParsing()
      }
    }
  }
  

  namespace com.kyle.quiz {
    namespace lient {
      class com.kyle.quizclient.TeacherController.AnswersData {
          ~ answerJson : String
          ~ keyJson : String
          + AnswersData()
      }
    }
  }
  

  com.kyle.quizclient.LocalStudentController -up-|> com.kyle.quizclient.StudentController
  com.kyle.quizclient.LocalTeacherController -up-|> com.kyle.quizclient.TeacherController
  com.kyle.quizclient.StudentClient -up-|> javafx.application.Application
  com.kyle.quizclient.StudentController .up.|> com.kyle.quiz.SubmittableQuiz
  com.kyle.quizclient.StudentController o-- com.kyle.quiz.QuizFormat : quiz
  com.kyle.quizclient.TeacherClient -up-|> javafx.application.Application
  com.kyle.quizclient.TeacherController .up.|> com.kyle.quiz.SubmittableQuiz
  com.kyle.quizclient.TeacherController o-- com.kyle.quiz.QuizFormat : quiz
  com.kyle.quizclient.TeacherController +-down- com.kyle.quizclient.TeacherController.AnswersData


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
